# Battle-City

./: .gitignore  CMakeLists.txt
Resources/Shaders/: fragment.txt  vertex.txt
Source/: main.cpp
Source/Renderer/: ShaderProgram.cpp  ShaderProgram.h
Source/Resources/: ResourceManager.cpp  ResourceManager.h
